--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,10 +24,11 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, Peter!
+        echo Peter Add other actions to build,
+        echo test, and deploy your project Supergillie
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
-        echo test, and deploy your project.
+        echo test, and deploy your project
