--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,6 +24,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
+        run: |
         echo Peter Add other actions to build,
         echo test, and deploy your project Supergillie
 
