--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,12 +24,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-        run: |
-        echo Peter Add other actions to build,
-        echo test, and deploy your project Supergillie
+      run: echo Hello, world!
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
-        echo test, and deploy your project
+        echo test, and deploy your project.
