Testar ändring i workflow 7

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,3 +31,6 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+        javac src/peter/com/gol.java
+        java src/peter/com/gol.java
+
