--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,3 +32,4 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
         javac src/peter/com/gol.java
+        java out/production/gameoflife/peter/com/gol.class
