--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,4 +31,4 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        java -Xdiag ./src/peter/com/gol.java
+        javac -Xdiag src/peter/com/gol.java
