--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Run a multi-line script
       run: |
         echo Add other actions to build,
-        echo test, and deploy your project.
+        echo tessdsdt, and deploy your project.
         java -cp java src/peter/com/gol.java
