--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,4 +36,4 @@ jobs:
       run: |
         echo Add other actions to build,
         echo tessdsdt, and deploy your project.
-        java -cp java src/peter/com/gol.java
+        java -cp java gameoflife
