--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,8 +29,9 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, world!
+      run: echo Hello, world! Here is Classpath;
            echo $CLASSPATH
+           echo was it nice?
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
